update a bit of Alloy, Goals, typos, requirements. See commit details
Alloy:
	- additional signature (Device, AppInstance, SupportedLanguages)
	- better divide sections
	- first assertion (CanDisplayInAllSupportedLanguages)

Goals:
	- rewriting some goals
	- deleting non-goals

General:
	- fix typos
	- add abbreviations
	- add UML modeling description
	- fix figures' captions
	- add R-display-right-language requirement
	- add D-no-user-hacker domain assumption

--- a/RASD/latex/sections/overview.tex
+++ b/RASD/latex/sections/overview.tex
@@ -35,7 +35,7 @@ Here we provide several scenarios to better delineate the purposes for which the
 		On Monday morning, as usual, Travlndar+ shows to John his daily program reminding him about his children and showing the previous  travel mean planned.\newline
 		John, still intentioned to pick the children up with the car, does not modify the plan, closes the app and goes to work in the other side of Milan.\newline
 		At 12.00 Travlendar+, according to the GPS position of the man, suggests him to leave in 15 minutes.
-		Travlendae+ also suggests to avoid to go through  Viale Gioia because of the traffic and take the SS1.\newline
+		Travlendar+ also suggests to avoid to go through  Viale Gioia because of the traffic and take the SS1.\newline
 		Thanks to Travlendar+ John manages to be on time, collect the children and make his wife proud of him. 
 \subsection{User characteristics}
 	\subsubsection{Actors}
@@ -63,6 +63,7 @@ Here we provide several scenarios to better delineate the purposes for which the
 			\item \mylabel{D-email-always-received}{when the S2B sends an email, it is always received by the receiver}
 			\item \mylabel{D-everyone-email}{every Person has an email address}
 			\item \mylabel{D-user-remember}{the User shall remember his password}
+			\item \mylabel{D-no-user-hacker}{the User knows only his password}
 			\item \mylabel{D-working-gps}{the User's device has a working GPS installed, to which the app has access}
 			\item \mylabel{D-provide-loc-API}{the affiliated companies provide a localization service APIs}
 			\item \mylabel{D-traffic}{Google Maps services take traffic into consideration}
