--- a/RASD/latex/sections/introduction.tex
+++ b/RASD/latex/sections/introduction.tex
@@ -11,11 +11,10 @@ The dynamicity of the software allows users to set some personal preferences, fo
 The system interfaces with other firms (e.g. transportation companies, territory maps companies, sharing transportation companies) to offer a more comprehensive user experience. In this way, a User has the possibility to buy tickets and passes for transportation means. Moreover, the system offers a location service for vehicles of affiliated shared transport companies but to proceed with the renting the User is redirected to the company's app.
 
 \subsubsection{Goals}
-The system should:
 	\begin{enumerate}[label={[G\arabic*]}]
-		\item \mylabel{G-dev-language}{allow a Person to use the app in his/her device language, if the language is one of the \defined{supported languages}, English otherwise}
+		\item \mylabel{G-dev-language}{Every User should be comfortable in the use of the app}
 		\item \mylabel{G-become-registered}{allow every Person to have his/her own account, after providing credentials}
-		\item \mylabel{G-log-in}{allow a Person to log in to his/her own account, and only in that}
+		\item \mylabel{G-log-in}{allow a Person into log in to his/her own account, and only in that}
 		\item \mylabel{G-use-credit-card}{allow User to use his/her own credit card}
 		\item \mylabel{G-pers-preferences}{allow a User to set personal preferences}
 		\begin{enumerate}[label=\theenumi\#{\arabic*}]
@@ -27,7 +26,6 @@ The system should:
 			\item \mylabel{G-transp-disabled}{set a specific transportation mean as permanently disabled}
 		\end{enumerate}
 		\item \mylabel{G-new-appointment}{allow User to create a new appointment, specifying its details}
-		\item \mylabel{G-visualize-update}{allow User to visualize his/her appointments, eventually updating its details}
 		\item \mylabel{G-choose-sug}{during the specification of details of an appointment, allow User to visualize suggested travel solutions and to choose one of them}
 		\begin{enumerate}[label=\theenumi\#{\arabic*}]
 			\item \mylabel{G-change-preferred-transp}{during the specification of details of an appointment, before the choice, allow User to set a preferred transportation mean}
@@ -38,6 +36,7 @@ The system should:
 			\item \mylabel{G-buy-ticket}{if the user does not own a ticket and the transportation company is \defined{affiliated} with Travlendar+, he/she can buy it}
 		\end{enumerate}
 		\item \mylabel{G-visualize-schedule}{allow User to visualize daily/weekly schedule}
+		\item \mylabel{G-visualize-update}{allow User to visualize his/her appointments, eventually updating their details if he/she is the creator}
 		\item \mylabel{G-delete}{allow User to delete an existing appointment}
 		\item \mylabel{G-locate}{allow User to locate nearest vehicle of a vehicle sharing system, if that is the transportation mean of choice of an incoming appointment}
 		\item \mylabel{G-redirection}{allow User to being redirected to the company's app to proceed with the renting of the selected shared vehicle}
@@ -63,7 +62,7 @@ The system should:
 			\item[- \textit{valid credentials}: Name, surname and personal email address]
 			\item[- \textit{appointment details}:]
 			\item[- \textit{incoming appointment}:]
-			\item[- \textit{affiliated company}:] a company (transoprt company or vehicle sharing company) that has deals with the S2B to allow the user to start the process of buying a ticket or renting a shared vehicle in the app and terminate it after being redirected to the affiliated company's system.
+			\item[- \textit{affiliated company}:] a company (transport company or vehicle sharing company) that has deals with the S2B to allow the user to start the process of buying a ticket or renting a shared vehicle in the app and terminate it after being redirected to the affiliated company's system.
 		\end{description}
 	\subsubsection{Acronyms}
 		\begin{description}
@@ -71,5 +70,10 @@ The system should:
 		\item[- \textit{API}:] Application Programming Interface.
 	\end{description}
 	\subsubsection{Abbreviations}
+		\begin{description}
+			\item[- \textit{[Gn]}:] n-th goal. Apart when it is actually defined, it is always a reference to the definition of the goal
+			\item[- \textit{[Dn]}:] n-th domain assumption. Apart when it is actually defined, it is always a reference to the definition of the domain assumption
+			\item[- \textit{[Rn]}:] n-th requirement
+		\end{description}
 \subsection{Revision history}
 \subsection{Document Structure}
