update mockup and use case diagramm. Update definitions on RASD

--- a/RASD/latex/sections/introduction.tex
+++ b/RASD/latex/sections/introduction.tex
@@ -60,9 +60,9 @@ The system interfaces with other firms (e.g. transportation companies, territory
 			- specify constraints, such as avoiding  bike, on the travel means solutions).
 			\item[- \textit{supported languages}:] the set of languages that the S2B will be able to use to comunicate with the user. English and Italian are included.
 			\item[- \textit{valid credentials}: Name, surname and personal email address]
-			\item[- \textit{appointment details}:]
-			\item[- \textit{incoming appointment}:]
-			\item[- \textit{affiliated company}:] a company (transport company or vehicle sharing company) that has deals with the S2B to allow the user to start the process of buying a ticket or renting a shared vehicle in the app and terminate it after being redirected to the affiliated company's system.
+			\item[- \textit{appointment details}:] time, date, type of appointment, location, number of passengers and precence of baggage.
+			\item[- \textit{incoming appointment}:] the next scheduled appointment for which the S2B send a remind to the user. The remind is sent  a certain amount of time before the appointment starts, to allow the user to get on time in the location.
+			\item[- \textit{affiliated company}:] a company (transport company or vehicle sharing company) that has deals with the S2B.
 		\end{description}
 	\subsubsection{Acronyms}
 		\begin{description}
