--- a/RASD/latex/sections/overview.tex
+++ b/RASD/latex/sections/overview.tex
@@ -59,7 +59,7 @@ Here we provide several scenarios to better delineate the purposes for which the
 	\subsubsection{Domain Assumptions}
 		\begin{enumerate}[label={[D\arabic*]}]
 			\item \mylabel{D-retrieve-language}{the user's device should allow the app to retrieve the language settings}
-			\item \mylabel{D-registration-proceed}{when the registration process begin, the User always inserts his/her credentials}
+			\item \mylabel{D-registration-proceed}{when the registration process begin, the Person always inserts his/her credentials}
 			\item \mylabel{D-email-always-received}{when the S2B sends an email, it is always received by the receiver}
 			\item \mylabel{D-everyone-email}{every Person has an email address}
 			\item \mylabel{D-user-remember}{the User shall remember his password}
