--- a/RASD/latex/sections/requirements.tex
+++ b/RASD/latex/sections/requirements.tex
@@ -242,68 +242,63 @@
 			\caption{Ticket handling Sub-Activity Diagram}
 		\end{figure}
 \subsection{Functional Requirements}
-	\goal{G-dev-language}
-	\begin{enumerate}[label={[R\arabic*]}]
-		\item \mylabel{R-retrieve-language}{the app must retrieve the language settings from the device}
-		\item \mylabel{R-display}{the app should be able to display its content in all the \defined{supported languages}}
-		\item \mylabel{R-display-right-language}{the app communicate to the user with the language set, if the language is one of the \defined{supported languages}, English otherwise}
-	\end{enumerate}
-	\begin{itemize}
-		\item[] \myref{D-retrieve-language}
-	\end{itemize}
-
 	\goal{G-become-registered}
-	\begin{enumerate}[resume, label={[R\arabic*]}]
-		\item \mylabel{R-begin-registration}{the S2B must provide a way to begin the registration process}
+	\begin{enumerate}[label={[R\arabic*]}]
+		\item \mylabel{R-begin-registration}{the S2B must provide to every Person a way to begin the registration process}
 		\item \mylabel{R-send-email}{after the insertion of the credentials and their \defined{validation}, the S2B has to send to the provided address an email with an activation link}
 		\item \mylabel{R-unique-email}{the registration fails if the inserted email is already associated to an account}
 		\item \mylabel{R-user-after-activation}{when the Person confirms through the activation link, he/she becomes a User}
-		\item \mylabel{R-restart}{in case of non \defined{valid credentials}, the system must reject them and restart the registration process}
+		\item \mylabel{R-restart}{in the case of non \defined{valid credentials}, the system must reject them and restart the registration process}
+		\item \mylabel{R-grant-access}{the S2B must grant access to the User if and only if the User inserts an existing email and the associated password}
 	\end{enumerate}
 	\begin{itemize}
 		\item[] \myref{D-registration-proceed}
 		\item[] \myref{D-email-always-received}
 		\item[] \myref{D-everyone-email}
-	\end{itemize}
-
-	\goal{G-log-in}
-	\begin{enumerate}[resume, label={[R\arabic*]}]
-		\item \mylabel{R-grant-access}{the S2B must grant access to the User if and only if the User inserts an existing email and the associated password}
-	\end{enumerate}
-	\begin{itemize}
 		\item[] \myref{D-user-remember}
 		\item[] \myref{D-no-user-hacker}
 	\end{itemize}
 
-	\goal{G-use-credit-card}
-	\begin{enumerate}[resume, label={[R\arabic*]}]
-		\item \mylabel{R-accept-cc}{the S2B must accept credit card data from the User}
-		\item \mylabel{R-check-cc}{the S2B must forward the credit card data to a credit institution to validate them}
-		\item \mylabel{R-valid-cc}{the S2B must let the User use the credit card if and only if the inserted credit card data are valid}
-	\end{enumerate}
-
 	\goal{G-pers-preferences}
 	\begin{enumerate}[resume, label={[R\arabic*]}]
-		\item \mylabel{R-store-preferences}{for each type of preference, the S2B must provide to the User the possibility to change and store the preference value(s)}
+		\item \mylabel{R-change-preferences}{for each type of preference, the S2B must provide the User the possibility to set or change the value(s)}
+		\item \mylabel{R-store-preferences}{for each type of preference, the S2B must store the preference value(s)}
 	\end{enumerate}
 
-	\goal{G-new-appointment}
+	\goal{G-all-appointment}
 	\begin{enumerate}[resume, label={[R\arabic*]}]
 		\item \mylabel{R-new-appointment}{the system must provide a way to start the creation of a new appointment}
 		\item \mylabel{R-appointment-details}{during the process the user shall insert the \defined{appointment details}}
 	\end{enumerate}
 
+	\goal{G-manage-agenda}
+	\begin{enumerate}[resume, label={[R\arabic*]}]
+		\item \mylabel{R-schedule-view}{existing appointments can be viewed together as a schedule view}
+		\item \mylabel{R-daily-weekly}{the schedule can be daily or weekly}
+		\item \mylabel{R-visualize}{from the schedule view, the system provides a way to visualize a single appointment and its details}
+		\item \mylabel{R-edit-details}{after visualizing an appointment, the User who created it, can choose to edit its details}
+		\item \mylabel{R-can-select}{in the schedule view the User can select one or more appointments}
+		\item \mylabel{R-delete-selected}{in the schedule view, selected appointments can be deleted}	
+	\end{enumerate}
+
 	\goal{G-choose-sug}
 	\begin{enumerate}[resume, label={[R\arabic*]}]
 		\item \mylabel{R-solutions}{when time and location of the current appointment are set, the S2B produces a list of travel solutions with associated suggestions}
-		\item \mylabel{R-choose-solution}{the S2B provide the user the possibility to choose one of the travel solutions or leave the travel plan unspecified}
+		\item \mylabel{R-choose-solution}{the S2B provide the user the possibility to choose one of the suggested travel solutions or leave the travel plan unspecified}
 		\item \mylabel{R-select-preferred}{the S2B also provide the possibility to choose a preferred transportation mean}
 		\item \mylabel{R-recompute-solutions}{when a new preferred transportation mean is selected the S2B has to recompute the list of solutions according to the new preference}
+		\item \mylabel{R-bad-weather}{if weather forecast are bad: foot, bicycle motorbike are discouraged}
+		\item \mylabel{R-strikes}{if strikes have been announced, public transport is discouraged}
+		\item \mylabel{R-baggage-passengers}{in case of baggage or passengers a car is recommended}
+		\item \mylabel{R-work}{in case of a work appointment, bicycle is discouraged}
 	\end{enumerate}
+	\begin{itemize}
+	\item[] \myref{D-traffic}
+    \end{itemize}
 	
 	\goal{G-invite}
 	\begin{enumerate}[resume, label={[R\arabic*]}]
-		\item \mylabel{R-can-invite}{when time and location of the current appointment are set, the S2B offers the possibility to invite other users or persons, through their emails.}
+		\item \mylabel{R-can-invite}{when time and location of the current appointment are set, the S2B offers the possibility to invite other Users or Persons, through their emails}
 		\item \mylabel{R-invite-send-email}{when a User or a Person is invited, the S2B will inform him/her sending an email}
 	\end{enumerate}
 	\begin{itemize}
@@ -312,31 +307,16 @@
 	
 	\goal{G-owns-ticket}
 	\begin{enumerate}[resume, label={[R\arabic*]}]
-		\item \mylabel{R-owns-ticket}{when the user selects a travel solution for which a ticket is expected, the S2B asks the User specify if he/she owns a ticket (either ordinary or a pass, in which case the deadline has to be inserted)}
+		\item \mylabel{R-accept-cc}{the S2B must accept credit card data from the User}
+        \item \mylabel{R-check-cc}{the S2B must forward the credit card data to a credit institution to validate them}
+		\item \mylabel{R-valid-cc}{the S2B must let the User use the credit card if and only if the inserted credit card data are valid}
+		\item \mylabel{R-owns-ticket}{when the user selects a travel solution for which a ticket is expected, the S2B asks the User to specify if he/she owns a ticket (either ordinary or a pass, in which case the deadline has to be inserted)}
 		\item \mylabel{R-buy-ticket}{if the user has selected a travel solution for which a ticket is expected and the User said to not own a ticket, the S2B asks him/her to buy a ticket (options available only for transportation means of \defined{affiliated companies})}
-	\end{enumerate}
-	
-	\goal{G-visualize-schedule}
-	\begin{enumerate}[resume, label={[R\arabic*]}]
-		\item \mylabel{R-schedule-view}{existing appointments can be viewed together as a schedule view}
-		\item \mylabel{R-daily-weekly}{the schedule can be daily or weekly}
-	\end{enumerate}
-	
-	\goal{G-visualize-update}
-	\begin{enumerate}[resume, label={[R\arabic*]}]
-		\item \mylabel{R-visualize}{from the schedule view, the system provides a way to visualize a single appointment and its details}
-		\item \mylabel{R-edit-details}{after visualizing an appointment, the User who created it, can choose to edit its details}
-	\end{enumerate}
-	
-	\goal{G-delete}
-	\begin{enumerate}[resume, label={[R\arabic*]}]
-		\item \mylabel{R-can-select}{in the schedule view the User can select one or more appointments}
-		\item \mylabel{R-delete-selected}{in the schedule view, selected appointments can be deleted}
 	\end{enumerate}
 	
 	\goal{G-locate}
 	\begin{enumerate}[resume, label={[R\arabic*]}]
-		\item \mylabel{R-provide-loc-service}{when an user visualize an incoming appointment for which a vehicle sharing system has to be used, the S2B provides a localization service}
+		\item \mylabel{R-provide-loc-service}{when a user visualize an incoming appointment for which a shared vehicle of an affiliated company has to be used, the S2B provides a localization service}
 	\end{enumerate}
 	\begin{itemize}
 		\item[] \myref{D-working-gps}
@@ -345,26 +325,15 @@
 	
 	\goal{G-redirection}
 	\begin{enumerate}[resume, label={[R\arabic*]}]
-		\item \mylabel{R-rent-vehicle}{the S2B offers the possibility to rent a vehicle}
-		\item \mylabel{R-redirects}{when the user selects a vehicle to rent, the app redirects him/her to the right company's app or site}
+		\item \mylabel{R-rent-vehicle}{after the User has localized a vehicle, the S2B offers the possibility to rent it}
+		\item \mylabel{R-redirects}{when the User selects the vehicle to rent, the app redirects him/her to the right company's app or site}
 	\end{enumerate}
-	
-	\goal{G-show-suggestions}
-	\begin{enumerate}[resume, label={[R\arabic*]}]
-		\item \mylabel{R-bad-weather}{if weather forecast are bad: foot, bicycle motorbike are discouraged}
-		\item \mylabel{R-strikes}{if strikes have been announced, public transport is discouraged}
-		\item \mylabel{R-baggage-passengers}{in case of baggage or passengers a car is recommended}
-		\item \mylabel{R-work}{in case of a work appointment, bicycle is discouraged}
-	\end{enumerate}
-	\begin{itemize}
-		\item[] \myref{D-traffic}
-	\end{itemize}
 
 	\goal{G-notify}
 	\begin{enumerate}[resume, label={[R\arabic*]}]
-		\item \mylabel{R-incoming-notified}{when an appointment becomes incoming, a notification is sent to the user}
-		\item \mylabel{R-notChoosen-suggests}{if a travel plan has not already been choosen, the notification suggests one}
-		\item \mylabel{R-choosen-update}{if a travel plan has already been choosen but at the moment better travel plans are available (according to new weather forecast and news on traffic and strikes), the notification suggests a new feasible solution}
+		\item \mylabel{R-incoming-notified}{when an appointment becomes incoming, the S2B sends a notification to the User}
+		\item \mylabel{R-notChoosen-suggests}{if a travel plan has not already been set by the User, the notification suggests one}
+		\item \mylabel{R-choosen-update}{if a travel plan has already been choosen but some complications (bad weather, traffic, strikes) have arosen the User is informed and a new feasible solution is suggested}
 	\end{enumerate}
 	
 \subsection{Performance Requirements}
