--- a/RASD/latex/sections/overview.tex
+++ b/RASD/latex/sections/overview.tex
@@ -1,6 +1,6 @@
 \subsection{Product perspective}
 \subsection{Product functions}
-Here we provide several scenarios to better delineate the purposes for which the app should be designed, the situations the S2B will deal with and more generally to have a better comprehension of the associated environment
+Here we provide several scenarios to better delineate the purposes for which the app should be designed, the situations the S2B will deal with and more generally to have a better comprehension of the associated environment.
 
 	\subsubsection{Scenario 1}
 	Mario is the director of his company and he has seen an ad of Travlendar+, so he wants to try it to organize the weekly meetings with his employees. After the installation, he has to register to the app. The first thing he creates is his weekly program. We work from Monday to Friday, from 8 am to 16 pm.\newline
@@ -47,7 +47,7 @@ Here we provide several scenarios to better delineate the purposes for which the
 			\item Credit Institution: the institution that checks the credit-card validity and reports it to the S2B;
 			\item Google: the system with whom the S2B retrieves the maps and related information about routes, real-time traffic situations, estimated travel time and weather conditions;
 			\item Transport Company System: the system of the affiliated companies with whom the S2B interacts to allow the user to buy the tickets for the associated travel mean;
-			\item Shared vehicle Company System: the system with whom the S2B interacts to allow the user to visualize the map of the available vehicles to rent and locate the nearest one. Vehicle Company System provides the GPS locations of the vehicles. To proceed with the renting the user is redirected to the vehicle Company System/App. The latter, to autenticate the user, uses the same credentials provided to the S2B.
+			\item Shared vehicle Company System: the system with whom the S2B interacts to allow the user to visualize the map of the available vehicles to rent and locate the nearest one. Vehicle Company System provides the GPS locations of the vehicles. To proceed with the renting the user is redirected to the vehicle Company System/App.
 			\item Manager: the person able to manage the system. His activities consists in adding or deleting affiliated companies (both  transport companies or shared vehicle companies) and adding new type of tickets according to the services provided by affiliated transport companies.
 		\end{itemize}
 \subsection{Assumptions, dependencies and constraints}
@@ -65,6 +65,6 @@ Here we provide several scenarios to better delineate the purposes for which the
 			\item \mylabel{D-user-remember}{the User shall remember his password}
 			\item \mylabel{D-no-user-hacker}{the User knows only his password}
 			\item \mylabel{D-working-gps}{the User's device has a working GPS installed, to which the app has access}
-			\item \mylabel{D-provide-loc-API}{the affiliated companies provide a localization service APIs}
+			\item \mylabel{D-provide-loc-API}{the affiliated shared vehicle companies provide a localization service APIs}
 			\item \mylabel{D-traffic}{Google Maps services take traffic into consideration}
 		\end{enumerate}
