change Logo and improve Cover

--- a/RASD/latex/titlePage.tex
+++ b/RASD/latex/titlePage.tex
@@ -1,14 +1,23 @@
 \begin{titlepage}
 
 \title{
-		\includegraphics[scale=0.5]{Images/PolimiLogo}
-		\bigskip
-		\Huge{\textbf{\\Travlendar\textsuperscript{+}}}\\
-		\LARGE{\bigskip Requirement Analysis and Specification Document}
-		}
-\author{Mirko Salaris, 
-		Piervincenzo Ventrella, 
-		Pietro Cassarino
+	\includegraphics[scale=0.5]{Images/PolimiLogo}
+	\\
+	\normalsize{Politecnico di Milano}\\
+	{AY 2017/2018}
+	\bigskip\\
+	\resizebox{\linewidth}{!}{~Travlendar\textsuperscript{+}}
+	\bigskip\\
+	\LARGE{Requirement Analysis and Specification Document}
+	\vfill
+}
+
+	\date{October 29, 2017}
+
+\author{
+	Mirko Salaris,
+	Piervincenzo Ventrella,
+	Pietro Cassarino
 }
 
 \maketitle
